<resources>
    <string name="app_name">Just Java</string>
    <string name="hint">Enter your name</string>
    <string name="topppings">toppings</string>
    <string name="topping1">Whipped cream</string>
    <string name="topping2">Chocolate</string>
    <string name="quantity">quantity</string>
    <string name="plus">+</string>
    <string name="textvalue">1</string>
    <string name="minus">-</string>
    <string name="order">order</string>
</resources>
